@@ -26,6 +26,7 @@ open Lw.Core.Typing.Ops
 open Lw.Core.Typing
 open Lw.Core.Typing.StateMonad
 open Lw.Core.Typing.Equivalence
+open Lw.Core.Typing.Report
 open PPrint
 
 type logger with
@@ -308,11 +309,11 @@ let test_entry (tchk : typechecker) sd ((s1, (res, flags)) : entry) =
     use D =
         let disps =
             let undo f g = f (); disposable_by g
-            let restore (r : Report.Alert.manager) = let x = r.state in fun () -> r.state <- x
-            let disable_all (r : Report.Alert.manager) = undo (fun () -> r.disable_all) (restore r)
-            let disable1 (r : Report.Alert.manager) n = undo (fun () -> r.disable n) (restore r)
-            let enable_all (r : Report.Alert.manager) = undo (fun () -> r.enable_all) (restore r)
-            let enable1 (r : Report.Alert.manager) n = undo (fun () -> r.enable n) (restore r)
+            let restore (r : Alert.manager) = let x = r.state in fun () -> r.state <- x
+            let disable_all (r : Alert.manager) = undo (fun () -> r.disable_all) (restore r)
+            let disable1 (r : Alert.manager) n = undo (fun () -> r.disable n) (restore r)
+            let enable_all (r : Alert.manager) = undo (fun () -> r.enable_all) (restore r)
+            let enable1 (r : Alert.manager) n = undo (fun () -> r.enable n) (restore r)
             let w = Report.warnings
             let h = Report.hints
             in
@@ -334,25 +335,29 @@ let test_entry (tchk : typechecker) sd ((s1, (res, flags)) : entry) =
             disposable_by (fun () -> for d in List.rev disps do d.Dispose ())   // dispose in reverse order for restoring state correctly
 
     let expected_hints =
-        Computation.B.set {
-            for flag in ed.enabled_flags do
-                match flag with
-                | flag.DisableHint n
-                | flag.EnableHint n -> yield n
-                | _ -> ()
-        }
+        if ed.is_flag_enabled flag.EnableHints || ed.is_flag_enabled flag.DisableHints then Alert.cset<_>.full
+        else
+            Alert.cset<_> (Computation.B.set {
+                    for flag in ed.enabled_flags do
+                        match flag with
+                        | flag.DisableHint n
+                        | flag.EnableHint n -> yield n
+                        | _ -> ()
+                })
     let expected_warns =
-        Computation.B.set {
-            for flag in ed.enabled_flags do
-                match flag with
-                | flag.DisableWarning n
-                | flag.EnableWarning n -> yield n
-                | _ -> ()
-        }
+        if ed.is_flag_enabled flag.EnableWarnings || ed.is_flag_enabled flag.DisableWarnings then Alert.cset<_>.full
+        else
+            Alert.cset<_> (Computation.B.set {
+                    for flag in ed.enabled_flags do
+                        match flag with
+                        | flag.DisableWarning n
+                        | flag.EnableWarning n -> yield n
+                        | _ -> ()
+                })
 
     let wh_infs () =
-        let flatten (tr : Report.Alert.tracer) expected =
-            let f n = sprintf "%d%s" n (if Set.contains n expected then "" else "(?)")
+        let flatten (tr : Alert.tracer) (expected : Alert.cset<_>) =
+            let f n = sprintf "%d%s" n (if expected.contains n then "" else "(?)")
             in
                 txt (mappen_stringables f ", " tr)
         in
@@ -365,7 +370,9 @@ let test_entry (tchk : typechecker) sd ((s1, (res, flags)) : entry) =
         testing (txt "parsed:" </> fmt "%O" p)
         let ϕ =
             match p with
-            | parsed.Expr e -> tchk.W_expr e
+            | parsed.Expr e ->
+                tchk.W_expr e
+
             | parsed.Decl d ->
                 let envs0 = tchk.envs
                 tchk.W_decl d
@@ -386,9 +393,9 @@ let test_entry (tchk : typechecker) sd ((s1, (res, flags)) : entry) =
                                                                        ok_or_no_info kb (kind ϕ.kind))])
 
     let wh_scores () =
-        let l name (tr : Report.Alert.tracer) expected =
-            let traced = Set.ofSeq tr
-            let f set fmt = if not (Set.isEmpty set) then [score.Weak, sprintf fmt name (flatten_stringables ", " set)] else []
+        let l name (tr : Alert.tracer) (expected : Alert.cset<_>) =
+            let traced = Alert.cset<_> <| Set.ofSeq tr                
+            let f (cset : Alert.cset<_>) fmt = if not cset.is_empty then [score.Weak, sprintf fmt name (flatten_stringables ", " cset.set)] else [] // HACK: better use cset.ToString 
             in
                 [ yield! f (traced - expected) "some unexpected %ss: %s"
                   yield! f (expected - traced) "some expected %ss were not shot: %s" ]
